force-app/main/default/objects/AccountContactRelation/fields/Document_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Document_Access_Token__c</fullName>
    <label>Documents Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>