force-app/main/default/objects/AccountContactRelation/fields/Has_Token__c.field-meta.xml
<CustomField>
    <fullName>Has_Token__c</fullName>
    <formula>LEN( Portal_Link__c ) &gt; 59</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Token?</label>
    <type>Checkbox</type>
</CustomField>