force-app/main/default/objects/AccountContactRelation/fields/IsCustomerPortalUser__c.field-meta.xml
<CustomField>
    <fullName>IsCustomerPortalUser__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsCustomerPortalUser</label>
    <type>Checkbox</type>
</CustomField>