force-app/main/default/objects/AccountContactRelation/fields/OptIn__c.field-meta.xml
<CustomField>
    <fullName>OptIn__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OptIn</label>
    <type>Checkbox</type>
</CustomField>