force-app/main/default/objects/AccountContactRelation/fields/Portal_Link__c.field-meta.xml
<CustomField>
    <fullName>Portal_Link__c</fullName>
    <formula>$Setup.CP_Doc_URL__c.Value__c &amp; Document_Access_Token__c</formula>
    <label>Portal Link</label>
    <type>Text</type>
</CustomField>