force-app/main/default/objects/AccountContactRelation/fields/Relationship_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Case_Safe_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Case Safe ID</label>
    <type>Text</type>
</CustomField>