force-app/main/default/objects/AccountContactRelation/fields/Shopify_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Customer_Id__c</fullName>
    <description>Used with Automate.io</description>
    <label>Shopify Customer Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>