force-app/main/default/objects/AccountContactRelation/fields/SyncedWithCP__c.field-meta.xml
<CustomField>
    <fullName>SyncedWithCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SyncedWithCP</label>
    <type>Checkbox</type>
</CustomField>