force-app/main/default/objects/AccountContactRelation/validationRules/Cannot_Edit_SyncedWithCP.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_SyncedWithCP</fullName>
    <active>false</active>
    <errorConditionFormula>AND($User.Alias &lt;&gt; &apos;Pload&apos;, $User.Alias &lt;&gt; &apos;CPortal&apos;, NOT(ISNEW()), ISCHANGED( SyncedWithCP__c ))</errorConditionFormula>
    <errorMessage>Only the Customer Portal User and Integration user can edit this field.</errorMessage>
</ValidationRule>