force-app/main/default/objects/AccountContactRelation/validationRules/Prevent_update_to_Roles.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_update_to_Roles</fullName>
    <active>false</active>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
$Profile.Id &lt;&gt; &quot;00ew0000001V8KJ&quot;,
$User.Id &lt;&gt; &quot;0052X000007sIwU&quot;,
$User.Id &lt;&gt; &quot;0052X000007s2rs&quot;,
$User.Id &lt;&gt; &quot;0052X000007MZIX&quot;,
$User.Id &lt;&gt; &quot;0052X000007Obek&quot;,
$User.Id &lt;&gt; &quot;0052X000007OeKT&quot;,
$User.Id &lt;&gt; &quot;0052X0000083Rni&quot;,
$User.Id &lt;&gt; &quot;0052X000007PSDI&quot;,
$User.Id &lt;&gt; &quot;0052X000007PUrK&quot;,
$User.Id &lt;&gt; &quot;005w0000007NLTn&quot;,
$User.Id &lt;&gt; &quot;005w0000006xO8S&quot;,
$User.Id &lt;&gt; &quot;0052X000007oVTN&quot;,
$User.Id &lt;&gt; &quot;0052X000007MXuU&quot;,
$User.Id &lt;&gt; &quot;0052X000007MYNC&quot;,
$User.Id &lt;&gt; &quot;005w00000038KxO&quot;,
$User.Id &lt;&gt; &quot;005w0000007M1vV&quot;,
$User.Id &lt;&gt; &quot;005w0000006nhue&quot;,
$User.Id &lt;&gt; &quot;0052X000007MQ9R&quot;,
$User.Id &lt;&gt; &quot;0052X000007rzWS&quot;,
$User.Id &lt;&gt; &quot;0054J000002kvcx&quot;,
$User.Id &lt;&gt; &quot;0052X000007OuAK&quot;,
$User.Id &lt;&gt; &quot;0054J000001Z9YG&quot;,
$User.Id &lt;&gt; &quot;0052X000008CJh1&quot;,
$User.Id &lt;&gt; &quot;0052X000007MQ8i&quot;,
$User.Id &lt;&gt; &quot;0052X000007PW8M&quot;,
$User.Id &lt;&gt; &quot;0054J000002lSt2&quot;,
$User.Id &lt;&gt; &quot;0052X000008CJgw&quot;,
$User.Id &lt;&gt; &quot;0052X000007PAXy&quot;,
$User.Id &lt;&gt; &quot;0052X000007s2MB&quot;,
$User.Id &lt;&gt; &quot;0052X000007rQAM&quot;,
$User.Id &lt;&gt; &quot;0052X000007PIhS&quot;,
$User.Id &lt;&gt; &quot;005w0000006nkee&quot;,
$User.Id &lt;&gt; &quot;0054J000002kvd2&quot;,
$User.Id &lt;&gt; &quot;0052X0000083TpM&quot;,
$User.Id &lt;&gt; &quot;005w0000006Zbrv&quot;,
$User.Id &lt;&gt; &quot;0052X000008WRTl&quot;,
NOT(ISNEW()), ISCHANGED(Roles),
NOT(PRIORVALUE(Roles) = &apos;&apos;))</errorConditionFormula>
    <errorMessage>Only the CS Team, Account Managers or a System Admin can update the value of Roles after the record is inserted.</errorMessage>
</ValidationRule>