force-app/main/default/objects/AccountContactRelation/validationRules/RestrictFinanceContactRoleChange.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictFinanceContactRoleChange</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ContactId = Account.FinanceContact__c, NOT(INCLUDES(Roles, &apos;Finance Contact&apos;)))</errorConditionFormula>
    <errorDisplayField>Roles</errorDisplayField>
    <errorMessage>Finance Contact role is required.</errorMessage>
</ValidationRule>